--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ plainwhite:
   # generate social links in footer
   social_links:
     #twitter: samarsault
-    github:  samarsault
+    github:  JingyuanYY
     #linkedIn: in/samarsault
     #dribbble: jekyll
     #flickr:   jekyll
@@ -38,7 +38,7 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    email: jekyll
+    email: jyyang@szu.edu.cn
 
     # Mastodon instances
     # mastodon:
