--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    email: jyyang@szu.edu.cn
+    email: jingyuanyang.jyy@gmail.com
 
     # Mastodon instances
     # mastodon:
