--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Jingyuan Yang (杨景媛)
+  name: Jingyuan Yang
   tagline: Assistant Professor
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
