--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Jingyuan Yang
-author: Jingyuan Yang
-email: jingyuanyang.jyy@gmail.com
+title: Yuxuan Ding
+author: Yuxuan Ding
+email: yxding@stu.xidian.edu.cn
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -12,14 +12,14 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Jingyuan Yang
-  tagline: Assistant Professor
+  name: Yuxuan Ding
+  tagline: PhD Candidate
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
   dark_mode: true # set to true to add dark mode toggle
-  portfolio_image: "assets/portfolio.png" # the path from the base directory of the site to the image to display (no / at the start)
-  portfolio_image_dark: "assets/portfolio_dark.png"
+  portfolio_image: "assets/portfolio.jpg" # the path from the base directory of the site to the image to display (no / at the start)
+  portfolio_image_dark: "assets/portfolio_dark.jpg"
   html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
   condensed_mobile:
     - home
@@ -28,7 +28,7 @@ plainwhite:
   # generate social links in footer
   social_links:
     #twitter: samarsault
-    github:  JingyuanYY
+    github:  yxding95
     #linkedIn: in/samarsault
     #dribbble: jekyll
     #flickr:   jekyll
@@ -39,7 +39,7 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    email: jingyuanyang.jyy@gmail.com
+    email: yxding@stu.xidian.edu.cn
 
     # Mastodon instances
     # mastodon:
