--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ plainwhite:
   social_links:
     #twitter: samarsault
     github:  yxding95
+    google: uOii3uEAAAAJ&hl
     #linkedIn: in/samarsault
     #dribbble: jekyll
     #flickr:   jekyll
