--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ plainwhite:
   social_links:
     #twitter: samarsault
     github:  yxding95
-    google: uOii3uEAAAAJ&hl
-    #linkedIn: in/samarsault
+    
+    linkedIn: in/samarsault
     #dribbble: jekyll
     #flickr:   jekyll
     #instagram: jekyll
@@ -41,6 +41,7 @@ plainwhite:
     #telegram: jekyll
     #gitlab: jekyll
     email: yxding@stu.xidian.edu.cn
+    google: uOii3uEAAAAJ&hl
 
     # Mastodon instances
     # mastodon:
