--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Yuxuan Ding
-author: Yuxuan Ding
-email: yxding@stu.xidian.edu.cn
+title: Haoxuan Ding
+author: Haoxuan Ding
+email: haoxuan.ding@mail.nwpu.edu.cn
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -12,7 +12,7 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Yuxuan Ding
+  name: Haoxuan Ding
   tagline: PhD Candidate
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
@@ -28,7 +28,7 @@ plainwhite:
   # generate social links in footer
   social_links:
     #twitter: samarsault
-    github:  yxding95
+    github:  Dinghaoxuan
     google: uOii3uEAAAAJ&hl
     #linkedIn: in/samarsault
     #dribbble: jekyll
