--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ plainwhite:
     #soundcloud: jekyll
     #telegram: jekyll
     #gitlab: jekyll
-    email: yxding@stu.xidian.edu.cn
+    email: haoxuan.ding@mail.nwpu.edu.cn
     
 
     # Mastodon instances
